<resources>
    <string name="app_name">CatChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cat Chat</string>
    <string name="nav_header_subtitle">spot@catchat.com</string>
    <string name="nav_header_desc">Frolicking Kitten</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inbox">Mesagez</string>
    <string name="menu_drafts">Draftz</string>
    <string name="menu_sent">Sent mesagez</string>
    <string name="nav_support">Support</string>
    <string name="menu_trash">In da trash</string>
    <string name="nav_help">Halp</string>
    <string name="nav_feedback">Giv us feedback</string>
</resources>
