<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inbox">

    <fragment
        android:id="@+id/nav_inbox"
        android:name="com.bit371.catchat.ui.inbox.InboxFragment"
        android:label="@string/menu_inbox"
        tools:layout="@layout/fragment_inbox" />

    <fragment
        android:id="@+id/nav_drafts"
        android:name="com.bit371.catchat.ui.drafts.DraftsFragment"
        android:label="@string/menu_drafts"
        tools:layout="@layout/fragment_drafts" />

    <fragment
        android:id="@+id/nav_sent"
        android:name="com.bit371.catchat.ui.sentitems.SentItemsFragment"
        android:label="@string/menu_sent"
        tools:layout="@layout/fragment_sent_itmes" />

    <fragment
        android:id="@+id/nav_trash"
        android:name="com.bit371.catchat.ui.trash.TrashFragment"
        android:label="@string/menu_trash"
        tools:layout="@layout/fragment_trash" />

    <activity
        android:id="@+id/nav_help"
        android:name="com.bit371.catchat.HelpActivity"
        android:label="@string/nav_help"
        tools:layout="@layout/activity_help" />

    <activity
        android:id="@+id/nav_feedback"
        android:name="com.bit371.catchat.FeedbackActivity"
        android:label="@string/nav_feedback"
        tools:layout="@layout/activity_feedback" />


</navigation>